Fix:amend sizing of final section on mobile view

--- a/src/client/styles/flyux.scss
+++ b/src/client/styles/flyux.scss
@@ -541,10 +541,12 @@ img{
     border-bottom:2px solid $flyux;
 }
 
-.outcomes{
-    height:90vh;
+.conclusion{
+    height:auto;
     
 }
+
+
 
 
 }
